--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css" />
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Basic Language of the Web: HTML</title>
   </head>
   <body>
@@ -28,7 +28,7 @@
             height="50px"
           />
 
-          < id="author">
+          <p id="author">
             Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
           </p>
 
